Data Validation Completed

--- a/research/Stage_01_Data_Ingestion.ipynb
+++ b/research/Stage_01_Data_Ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "'/home/priyanshu1303d/Projects/DeepQA_PyTorch/research'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "'/home/priyanshu1303d/Projects/DeepQA_PyTorch'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,12 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DataIngestion :\n",
-    "    def __init__(self , config = ConfigurationManager):\n",
+    "    def __init__(self , config = DataIngestionConfig):\n",
     "        self.config = config\n",
     "\n",
     "\n",
@@ -171,60 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-04-02 11:50:00,593 : INFO : common  : yaml file config/config.yaml was read succesfully]\n",
-      "[2025-04-02 11:50:00,595 : INFO : common  : yaml file params.yaml was read succesfully]\n",
-      "[2025-04-02 11:50:00,596 : INFO : common  : Created directory at : artifacts]\n",
-      "[2025-04-02 11:50:00,597 : INFO : common  : Created directory at : artifacts/data_ingestion]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Retrieving folder contents\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing file 1ohZpjE-WV2iao4fx6eWQlIY3MPXA8vLK 100_Unique_QA_Dataset.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Retrieving folder contents completed\n",
-      "Building directory structure\n",
-      "Building directory structure completed\n",
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1ohZpjE-WV2iao4fx6eWQlIY3MPXA8vLK\n",
-      "To: /home/priyanshu1303d/Projects/DeepQA_PyTorch/artifacts/data_ingestion/100_Unique_QA_Dataset.zip\n",
-      "100%|██████████| 2.28k/2.28k [00:00<00:00, 14.2MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2025-04-02 11:50:06,176 : INFO : 683655079  : Dataset downloaded!!]\n",
-      "[2025-04-02 11:50:06,177 : INFO : 683655079  : Extraction Completed]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Download completed\n"
+      "[2025-04-02 13:00:50,211 : INFO : common  : yaml file config/config.yaml was read succesfully]\n",
+      "[2025-04-02 13:00:50,214 : INFO : common  : yaml file params.yaml was read succesfully]\n",
+      "[2025-04-02 13:00:50,216 : INFO : common  : Created directory at : artifacts]\n",
+      "[2025-04-02 13:00:50,217 : INFO : common  : Created directory at : artifacts/data_ingestion]\n",
+      "[2025-04-02 13:00:50,219 : INFO : 323618669  : file already exists of size : ~2 in KB]\n",
+      "[2025-04-02 13:00:50,222 : INFO : 323618669  : Extraction Completed]\n"
      ]
     }
    ],
