Data Transformation and Model Training Completed

--- a/research/Stage_03_Data_Transformation.ipynb
+++ b/research/Stage_03_Data_Transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'/home/priyanshu1303d/Projects/DeepQA_PyTorch/research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "'/home/priyanshu1303d/Projects/DeepQA_PyTorch'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "9          What is the longest river in the world?               Nile"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,34 +191,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tokenization (Breaking text into words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize(text):\n",
-    "    text = text.lower()\n",
-    "    text = text.replace(\"?\",\"\")\n",
-    "    text = text.replace(\"'\",\"\")\n",
-    "    tokens =  text.split()\n",
-    "    return tokens"
    ]
   },
   {
@@ -229,129 +208,10 @@
     {
      "data": {
       "text/plain": [
-       "['what', 'is', 'the', 'name', 'of', 'the', 'best', 'footballer']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenize(\"What is the name of the best footballeR?\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Building a Vocabulary (Word-to-Index Mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vocab = {'<UNK>' : 0}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_vocab(row):\n",
-    "    tokenized_question = tokenize(row['question'])\n",
-    "    tokenize_answer = tokenize(row['answer'])\n",
-    "\n",
-    "    \n",
-    "    merged_tokens = tokenized_question + tokenize_answer\n",
-    "\n",
-    "    for token in merged_tokens:\n",
-    "        if token not in vocab:\n",
-    "            vocab[token] = len(vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.apply(build_vocab, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Numericalization (Converting Words to Numbers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def text_to_indices(text , vocab):\n",
-    "\n",
-    "    indexed_text = []\n",
-    "\n",
-    "    if token in vocab:\n",
-    "      indexed_text.append(vocab[token])\n",
-    "    else:\n",
-    "      indexed_text.append(vocab['<UNK>'])\n",
-    "\n",
-    "    return indexed_text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Padding & Batching (Handling Variable-Length Sequences)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Modular Coding\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os \n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "'/home/priyanshu1303d/Projects/DeepQA_PyTorch'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,22 +231,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass(frozen=True)\n",
+    "class DataTransformationConfig:\n",
+    "    root_dir : Path\n",
+    "    data_path : Path\n",
+    "    output_dir : Path\n",
+    "    vocab_file_path: Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from DeepQA.utils.common import read_yaml , create_directories , get_size\n",
+    "from DeepQA.logging import logger\n",
+    "from DeepQA.constants import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(self , config_filepath = CONFIG_FILE_PATH , params_filepath = PARAMS_FILE_PATH ):\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_data_transformation(self) -> DataTransformationConfig:\n",
+    "        config = self.config.data_transformation\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "        data_transformation = DataTransformationConfig(\n",
+    "            root_dir = config.root_dir,\n",
+    "            data_path = config.data_path,\n",
+    "            vocab_file_path = config.vocab_file_path,\n",
+    "            output_dir= config.output_dir\n",
+    "        )\n",
+    "\n",
+    "        return data_transformation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import pickle\n",
+    "import torch\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataTransformation:\n",
+    "    def __init__(self, config: DataTransformationConfig):\n",
+    "        self.config = config\n",
+    "        self.vocab = {\n",
+    "            '<PAD>': 0,\n",
+    "            '<UNK>': 1,\n",
+    "            '<SOS>': 2,\n",
+    "            '<EOS>': 3\n",
+    "        }\n",
+    "\n",
+    "    def tokenize(self, text: str):\n",
+    "        \"\"\"Tokenizes and cleans the input text.\"\"\"\n",
+    "        text = text.lower()\n",
+    "        text = re.sub(r\"[^\\w\\s]\", \"\", text)  # Remove punctuation\n",
+    "        return text.split()\n",
+    "\n",
+    "    def build_vocab(self, dataset):\n",
+    "        \"\"\"Builds a vocabulary from the dataset.\"\"\"\n",
+    "        for _, row in dataset.iterrows():\n",
+    "            tokens = self.tokenize(row['question']) + self.tokenize(row['answer'])\n",
+    "            for token in tokens:\n",
+    "                if token not in self.vocab:\n",
+    "                    self.vocab[token] = len(self.vocab)\n",
+    "\n",
+    "    def text_to_indices(self, text: str):\n",
+    "        \"\"\"Converts a single sentence into a list of indices.\"\"\"\n",
+    "        return [self.vocab.get(token, self.vocab['<UNK>']) for token in self.tokenize(text)]\n",
+    "\n",
+    "    def df_to_indices(self, df: pd.DataFrame):\n",
+    "        \"\"\"Converts an entire DataFrame's 'question' and 'answer' columns into indexed lists.\"\"\"\n",
+    "        df['question_indices'] = df['question'].apply(self.text_to_indices)\n",
+    "        df['answer_indices'] = df['answer'].apply(self.text_to_indices)\n",
+    "        return df\n",
+    "\n",
+    "    def load_dataset(self):\n",
+    "        \"\"\"Loads the dataset from the specified data path.\"\"\"\n",
+    "        data_file = self.config.data_path\n",
+    "        data_path = Path(data_file)\n",
+    "        return pd.read_csv(data_path)  # Modify this if using a different format\n",
+    "    \n",
+    "\n",
+    "    def save_dataset(self, df: pd.DataFrame, format: str = \"csv\"):\n",
+    "        \"\"\"Saves the dataset to the specified output directory in the chosen format.\"\"\"\n",
+    "        \n",
+    "        output_path = Path(self.config.output_dir)\n",
+    "        output_path.mkdir(parents=True, exist_ok=True)  # Ensure directory exists\n",
+    "\n",
+    "        file_path = output_path / f\"preprocessed_data.{format}\"\n",
+    "\n",
+    "        if format == \"csv\":\n",
+    "            df.to_csv(file_path, index=False)\n",
+    "        elif format == \"json\":\n",
+    "            df.to_json(file_path, orient=\"records\", lines=True)\n",
+    "        elif format == \"pkl\":\n",
+    "            with open(file_path, \"wb\") as f:\n",
+    "                pickle.dump(df, f)\n",
+    "        elif format == \"pt\":\n",
+    "            torch.save(df, file_path)\n",
+    "        else:\n",
+    "            raise ValueError(\"Unsupported format! Choose from 'csv', 'json', 'pkl', or 'pt'.\")\n",
+    "\n",
+    "        print(f\"Dataset saved at: {file_path}\")\n",
+    "\n",
+    "        vocab_dir = Path(self.config.vocab_file_path)\n",
+    "        vocab_dir.mkdir(parents=True, exist_ok=True)    \n",
+    "\n",
+    "        vocab_file_path = vocab_dir / \"vocab.json\"\n",
+    "\n",
+    "        with open(vocab_file_path, \"w\") as f:\n",
+    "            json.dump(self.vocab, f, indent=4)\n",
+    "\n",
+    "        print(f\"Vocabulary saved at: {vocab_file_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (2068750456.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[16], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-04-03 10:58:27,574 : INFO : common  : yaml file config/config.yaml was read succesfully]\n",
+      "[2025-04-03 10:58:27,577 : INFO : common  : yaml file params.yaml was read succesfully]\n",
+      "[2025-04-03 10:58:27,578 : INFO : common  : Created directory at : artifacts]\n",
+      "[2025-04-03 10:58:27,579 : INFO : common  : Created directory at : artifacts/data_transformation]\n",
+      "Dataset saved at: artifacts/data_transformation/Preprocessed_Data/preprocessed_data.csv\n",
+      "Vocabulary saved at: artifacts/data_transformation/Vocab/vocab.json\n"
      ]
     }
    ],
    "source": [
-    "@dataclass(frozen=True)\n",
-    "class DataPreProcessingConfig:\n",
-    "    "
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_transformation_config = config.get_data_transformation()\n",
+    "    data_transformation = DataTransformation(data_transformation_config)\n",
+    "    \n",
+    "    df = data_transformation.load_dataset()\n",
+    "\n",
+    "    # Build vocabulary\n",
+    "    data_transformation.build_vocab(df)\n",
+    "\n",
+    "    # Convert text to indices\n",
+    "    df = data_transformation.df_to_indices(df)\n",
+    "\n",
+    "    data_transformation.save_dataset(df)\n",
+    "except Exception as e:\n",
+    "    raise e"
    ]
   },
   {
@@ -394,35 +415,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\"\""
+   ]
   }
  ],
  "metadata": {
