--- a/research/Stage_04_Model_Trainer.ipynb
+++ b/research/Stage_04_Model_Trainer.ipynb
@@ -2,41 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os \n",
     "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/priyanshu1303d/Projects/DeepQA_PyTorch/research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"../\")"
    ]
   },
   {
@@ -47,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/priyanshu1303d/Projects/DeepQA_PyTorch'"
+       "'/home/priyanshu1303d/Projects/DeepQA_PyTorch/research'"
       ]
      },
      "execution_count": 4,
@@ -65,12 +36,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass"
+    "os.chdir(\"../\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/priyanshu1303d/Projects/DeepQA_PyTorch'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,6 +287,9 @@
     "        # Save the model (fix below)\n",
     "        model_path = self.output_path / \"qa_rnn.pth\"\n",
     "        torch.save(self.model.state_dict(), str(model_path))\n",
+    "\n",
+    "        # torch.save(self.model, str(model_path))  # Saves the whole model\n",
+    "\n",
     "        logger.info(f\"✅ Model saved at {model_path}\")\n",
     "\n",
     "\n",
@@ -334,50 +337,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-04-03 16:01:01,654 : INFO : common  : yaml file config/config.yaml was read succesfully]\n",
-      "[2025-04-03 16:01:01,658 : INFO : common  : yaml file params.yaml was read succesfully]\n",
-      "[2025-04-03 16:01:01,659 : INFO : common  : Created directory at : artifacts]\n",
-      "[2025-04-03 16:01:01,661 : INFO : common  : Created directory at : artifacts/model_trainer]\n",
-      "[2025-04-03 16:01:01,663 : INFO : 868721043  : -------------Started Training----------]\n",
-      "[2025-04-03 16:01:01,892 : INFO : 868721043  : Epoch [1/30], Loss: 6.0154]\n",
-      "[2025-04-03 16:01:02,091 : INFO : 868721043  : Epoch [2/30], Loss: 3.6482]\n",
-      "[2025-04-03 16:01:02,286 : INFO : 868721043  : Epoch [3/30], Loss: 1.5758]\n",
-      "[2025-04-03 16:01:02,499 : INFO : 868721043  : Epoch [4/30], Loss: 0.6935]\n",
-      "[2025-04-03 16:01:02,846 : INFO : 868721043  : Epoch [5/30], Loss: 0.4844]\n",
-      "[2025-04-03 16:01:03,098 : INFO : 868721043  : Epoch [6/30], Loss: 0.4059]\n",
-      "[2025-04-03 16:01:03,296 : INFO : 868721043  : Epoch [7/30], Loss: 0.2352]\n",
-      "[2025-04-03 16:01:03,490 : INFO : 868721043  : Epoch [8/30], Loss: 0.2633]\n",
-      "[2025-04-03 16:01:03,740 : INFO : 868721043  : Epoch [9/30], Loss: 0.3094]\n",
-      "[2025-04-03 16:01:03,965 : INFO : 868721043  : Epoch [10/30], Loss: 0.1124]\n",
-      "[2025-04-03 16:01:04,157 : INFO : 868721043  : Epoch [11/30], Loss: 0.0655]\n",
-      "[2025-04-03 16:01:04,347 : INFO : 868721043  : Epoch [12/30], Loss: 0.0676]\n",
-      "[2025-04-03 16:01:04,592 : INFO : 868721043  : Epoch [13/30], Loss: 0.0512]\n",
-      "[2025-04-03 16:01:04,815 : INFO : 868721043  : Epoch [14/30], Loss: 0.0439]\n",
-      "[2025-04-03 16:01:05,015 : INFO : 868721043  : Epoch [15/30], Loss: 0.1173]\n",
-      "[2025-04-03 16:01:05,223 : INFO : 868721043  : Epoch [16/30], Loss: 0.0841]\n",
-      "[2025-04-03 16:01:05,504 : INFO : 868721043  : Epoch [17/30], Loss: 0.0185]\n",
-      "[2025-04-03 16:01:05,698 : INFO : 868721043  : Epoch [18/30], Loss: 0.0156]\n",
-      "[2025-04-03 16:01:05,890 : INFO : 868721043  : Epoch [19/30], Loss: 0.0048]\n",
-      "[2025-04-03 16:01:06,086 : INFO : 868721043  : Epoch [20/30], Loss: 0.0040]\n",
-      "[2025-04-03 16:01:06,291 : INFO : 868721043  : Epoch [21/30], Loss: 0.0036]\n",
-      "[2025-04-03 16:01:06,485 : INFO : 868721043  : Epoch [22/30], Loss: 0.0032]\n",
-      "[2025-04-03 16:01:06,669 : INFO : 868721043  : Epoch [23/30], Loss: 0.0029]\n",
-      "[2025-04-03 16:01:06,858 : INFO : 868721043  : Epoch [24/30], Loss: 0.0027]\n",
-      "[2025-04-03 16:01:07,044 : INFO : 868721043  : Epoch [25/30], Loss: 0.0025]\n",
-      "[2025-04-03 16:01:07,236 : INFO : 868721043  : Epoch [26/30], Loss: 0.0023]\n",
-      "[2025-04-03 16:01:07,424 : INFO : 868721043  : Epoch [27/30], Loss: 0.0021]\n",
-      "[2025-04-03 16:01:07,628 : INFO : 868721043  : Epoch [28/30], Loss: 0.0020]\n",
-      "[2025-04-03 16:01:07,834 : INFO : 868721043  : Epoch [29/30], Loss: 0.0018]\n",
-      "[2025-04-03 16:01:08,020 : INFO : 868721043  : Epoch [30/30], Loss: 0.0017]\n",
-      "[2025-04-03 16:01:08,022 : INFO : 868721043  : ✅ Model saved at artifacts/model_trainer/qa_rnn.pth]\n",
-      "🔹 Validation Loss: 0.0016\n"
+      "[2025-04-03 18:58:56,182 : INFO : common  : yaml file config/config.yaml was read succesfully]\n",
+      "[2025-04-03 18:58:56,185 : INFO : common  : yaml file params.yaml was read succesfully]\n",
+      "[2025-04-03 18:58:56,186 : INFO : common  : Created directory at : artifacts]\n",
+      "[2025-04-03 18:58:56,187 : INFO : common  : Created directory at : artifacts/model_trainer]\n",
+      "[2025-04-03 18:58:57,634 : INFO : 12142567  : -------------Started Training----------]\n",
+      "[2025-04-03 18:58:58,170 : INFO : 12142567  : Epoch [1/30], Loss: 6.0406]\n",
+      "[2025-04-03 18:58:58,356 : INFO : 12142567  : Epoch [2/30], Loss: 3.7010]\n",
+      "[2025-04-03 18:58:58,563 : INFO : 12142567  : Epoch [3/30], Loss: 1.7173]\n",
+      "[2025-04-03 18:58:58,760 : INFO : 12142567  : Epoch [4/30], Loss: 0.8524]\n",
+      "[2025-04-03 18:58:58,952 : INFO : 12142567  : Epoch [5/30], Loss: 0.4105]\n",
+      "[2025-04-03 18:58:59,134 : INFO : 12142567  : Epoch [6/30], Loss: 0.4558]\n",
+      "[2025-04-03 18:58:59,318 : INFO : 12142567  : Epoch [7/30], Loss: 0.3043]\n",
+      "[2025-04-03 18:58:59,500 : INFO : 12142567  : Epoch [8/30], Loss: 0.0999]\n",
+      "[2025-04-03 18:58:59,664 : INFO : 12142567  : Epoch [9/30], Loss: 0.1611]\n",
+      "[2025-04-03 18:58:59,844 : INFO : 12142567  : Epoch [10/30], Loss: 0.1551]\n",
+      "[2025-04-03 18:59:00,031 : INFO : 12142567  : Epoch [11/30], Loss: 0.0921]\n",
+      "[2025-04-03 18:59:00,225 : INFO : 12142567  : Epoch [12/30], Loss: 0.0630]\n",
+      "[2025-04-03 18:59:00,413 : INFO : 12142567  : Epoch [13/30], Loss: 0.0146]\n",
+      "[2025-04-03 18:59:00,598 : INFO : 12142567  : Epoch [14/30], Loss: 0.0089]\n",
+      "[2025-04-03 18:59:00,783 : INFO : 12142567  : Epoch [15/30], Loss: 0.0077]\n",
+      "[2025-04-03 18:59:00,969 : INFO : 12142567  : Epoch [16/30], Loss: 0.0056]\n",
+      "[2025-04-03 18:59:01,155 : INFO : 12142567  : Epoch [17/30], Loss: 0.0051]\n",
+      "[2025-04-03 18:59:01,348 : INFO : 12142567  : Epoch [18/30], Loss: 0.0046]\n",
+      "[2025-04-03 18:59:01,525 : INFO : 12142567  : Epoch [19/30], Loss: 0.0041]\n",
+      "[2025-04-03 18:59:01,713 : INFO : 12142567  : Epoch [20/30], Loss: 0.0038]\n",
+      "[2025-04-03 18:59:01,902 : INFO : 12142567  : Epoch [21/30], Loss: 0.0034]\n",
+      "[2025-04-03 18:59:02,100 : INFO : 12142567  : Epoch [22/30], Loss: 0.0032]\n",
+      "[2025-04-03 18:59:02,484 : INFO : 12142567  : Epoch [23/30], Loss: 0.0029]\n",
+      "[2025-04-03 18:59:02,782 : INFO : 12142567  : Epoch [24/30], Loss: 0.0027]\n",
+      "[2025-04-03 18:59:03,056 : INFO : 12142567  : Epoch [25/30], Loss: 0.0025]\n",
+      "[2025-04-03 18:59:03,279 : INFO : 12142567  : Epoch [26/30], Loss: 0.0023]\n",
+      "[2025-04-03 18:59:03,465 : INFO : 12142567  : Epoch [27/30], Loss: 0.0022]\n",
+      "[2025-04-03 18:59:03,655 : INFO : 12142567  : Epoch [28/30], Loss: 0.0020]\n",
+      "[2025-04-03 18:59:03,856 : INFO : 12142567  : Epoch [29/30], Loss: 0.0019]\n",
+      "[2025-04-03 18:59:04,042 : INFO : 12142567  : Epoch [30/30], Loss: 0.0018]\n",
+      "[2025-04-03 18:59:04,043 : INFO : 12142567  : ✅ Model saved at artifacts/model_trainer/qa_rnn.pth]\n",
+      "🔹 Validation Loss: 0.0017\n"
      ]
     }
    ],
