Milestone 1 Completed and Streamlit Deployed

--- a/research/Stage_06_Model_Prediction.ipynb
+++ b/research/Stage_06_Model_Prediction.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "'/home/priyanshu1303d/Projects/DeepQA_PyTorch'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-04-03 21:24:45,052 : INFO : common  : yaml file config/config.yaml was read succesfully]\n",
-      "[2025-04-03 21:24:45,054 : INFO : common  : yaml file params.yaml was read succesfully]\n",
-      "whale\n"
+      "[2025-04-05 13:07:28,702 : INFO : common  : yaml file config/config.yaml was read succesfully]\n",
+      "[2025-04-05 13:07:28,705 : INFO : common  : yaml file params.yaml was read succesfully]\n",
+      "pacificocean\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
     "    config = ConfigurationManager()\n",
     "    get_model_prediction_config  = config.get_model_prediction_config()\n",
     "    model_prediction = Predictor(get_model_prediction_config)\n",
-    "    answer = model_prediction.predict(\"What is the largest mammal on Earth?\")\n",
+    "    answer = model_prediction.predict(\"Which ocean is the largest?\")\n",
     "    print(answer)\n",
     "except Exception as e:\n",
     "    raise e"
